# SandboxInterfaceLibrary

./: CMakeLists.txt  Makefile  README.md  main.cpp  op.ll  rlbox_helpers.hpp  solution.ll
lls/: lib.ll  lib_wasm.ll  op.ll  solution.ll  wasm-rt-impl.ll  wasm-rt-os-win.ll  wasm-rt-runner.ll  wasm-rt-shadow.ll
llvmlinker/: Readme.md  lib.ll  lib_wasm.ll  op.ll  solution.ll  wasm-rt-impl.ll  wasm-rt-os-unix.ll  wasm-rt-runner.ll  wasm-rt-shadow.ll  wasm-rt-wasi.ll
sbx_interface_def/: Readme.md  Sbx_c_connector.cpp  Sbx_c_connector.h  Sbx_c_connector.ll  Sbx_cpp_interface.cpp  Sbx_cpp_interface.h  Sbx_cpp_interface.ll  rlbox.hpp  rlbox_sandbox.hpp  rlbox_wasm2c_sandbox.hpp  simple_main.c  solution.cpp  solution.ll
tainted_header_definitions/: _builtin_common_tainted.cpp  _builtin_stdio_tainted.cpp  _builtin_stdio_tainted.h  _builtin_string_tainted.cpp  _builtin_string_tainted.h  assert_tainted.cpp  assert_tainted.h  checkcbox_extensions.cpp  checkcbox_extensions.h  errno_tainted.cpp  errno_tainted.h  fenv_tainted.cpp  fenv_tainted.h  inttypes_tainted_internal.cpp  inttypes_tainted_internal.h  math_tainted.cpp  math_tainted.h  signal_tainted.cpp  signal_tainted.h  stdio_tainted.cpp  stdio_tainted.h  stdlib_tainted.cpp  stdlib_tainted.h  string_tainted.cpp  string_tainted.h  threads_tainted.cpp  threads_tainted.h  time_tainted.cpp  time_tainted.h  unistd_tainted.cpp  unistd_tainted.h
wasm_readable_definitions/: Readme.md  lib_wasm.c  lib_wasm.h  lib_wasm.ll
wasmrt/: Readme.md  wasm-rt-impl.c  wasm-rt-impl.h  wasm-rt-impl.ll  wasm-rt-os-unix.ll  wasm-rt-runner.c  wasm-rt-runner.ll  wasm-rt-shadow.cpp  wasm-rt-wasi.c  wasm-rt-wasi.ll
